--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,21 +7,21 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Le styles -->
-    <link href="{{site.baseurl}}/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="{{site.github.url}}/assets/css/bootstrap.css" rel="stylesheet">
  <!--   <style>
       body { padding-top: 60px; /* 60px to make the container go all the way
        to the bottom of the topbar */ }
     </style-->
-    <link href="{{site.baseurl}}/assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{site.baseurl}}/assets/css/docs.css" rel="stylesheet">
-    <link href="{{site.baseurl}}/assets/css/pygments-github.css" rel="stylesheet">
+    <link href="{{site.github.github.url}}/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{site.github.url}}/assets/css/docs.css" rel="stylesheet">
+    <link href="{{site.github.url}}/assets/css/pygments-github.css" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
       </script>
     <![endif]-->
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="{{site.baseurl}}/assets/img/favicon.ico">
+    <link rel="shortcut icon" href="{{site.github.url}}/assets/img/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
     </script>
   </head>
@@ -29,16 +29,16 @@
     <header class="navbar navbar-fixed-top">
       <div class="container">
          <div class="navbar-header">
-          <a href="{{site.baseurl}}/">
+          <a href="{{site.github.url}}/">
             <img alt="Xapi Project"
-              src="{{site.baseurl}}/assets/img/xapi-project.png">
+              src="{{site.github.url}}/assets/img/xapi-project.png">
           </a>
         </div>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="{{site.baseurl}}/xen-api/">XenAPI</a></li>
-            <li><a href="{{site.baseurl}}/getting-started/architecture.html">Architecture</a></li>
-            <li><a href="{{site.baseurl}}/design-docs/">Designs</a></li>
+            <li><a href="{{site.github.url}}/xen-api/">XenAPI</a></li>
+            <li><a href="{{site.github.url}}/getting-started/architecture.html">Architecture</a></li>
+            <li><a href="{{site.github.url}}/design-docs/">Designs</a></li>
           </ul>
         </nav>
       </div>
@@ -60,7 +60,7 @@
                       {% for p in site.pages %}
                         {% if p.path == d %}
                           <li data-section="{{p.path}}">
-                            <a href="{{site.baseurl}}{{p.url}}">{{p.title}}</a>
+                            <a href="{{site.github.url}}{{p.url}}">{{p.title}}</a>
                           </li>
                         {% endif %}
                       {% endfor %}
@@ -138,7 +138,7 @@
       </div>
     </div>
 
-    <script src="{{site.baseurl}}/assets/js/bootstrap.min.js">
+    <script src="{{site.github.url}}/assets/js/bootstrap.min.js">
     </script>
 
     <script>
