--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,7 +12,7 @@
       body { padding-top: 60px; /* 60px to make the container go all the way
        to the bottom of the topbar */ }
     </style-->
-    <link href="{{site.github.github.url}}/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{site.github.url}}/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{site.github.url}}/assets/css/docs.css" rel="stylesheet">
     <link href="{{site.github.url}}/assets/css/pygments-github.css" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
